# kai

./: .env.example  .gitignore  .npmignore  AGENT_SYSTEM_REFERENCE.md  AUDIT_REPORT.md  LICENSE  LSP_IMPLEMENTATION_PLAN.md  README.md  SKILLS_LIBRARY_PLAN.md  content-calendar.md  landing.html  package-lock.json  package.json  test-skills.ts  tsconfig.json  vitest.config.ts
config/: builtin-agents.json  builtin-skills.json
docs/: agent-system-audit.md  agent-v2-README.md  agent-v2-architecture.md  agent-v2-implementation-plan.md  agent-v2-phase1-implementation.md  agent-v2-phase1-quickstart.md  config-bootstrap-summary.md  consolidation-complete.md  llm-cost-audit.md  llm-token-audit-2026-04-09.md  skills-workflows-audit.md  system-consolidation-plan.md
examples/: ai-news-briefing.yaml  daily-digest.yaml  nightly-commit.yaml  travelling-dev-assistant.yaml  youtube-assistant.yaml  yt-daily-scout.yaml  yt-weekly-deepdive.yaml
landing-page/: index.html
scripts/: after-sign.cjs  after-sign.js  build-macos-local.sh  build-server.cjs  generate-icons.sh  migrate-agents.js  migrate-db.ts  pre-sign-node-modules.cjs  pre-sign-node-modules.js  setup-homebrew.sh  tauri-build.cjs  tauri-build.js  tauri-build.ps1  tauri-build.sh  test-config-bootstrap.mjs
src/: agent-persona.ts  archival.ts  auto-route.ts  client.ts  commands.ts  config.ts  cron.ts  (+31 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  NodeEntitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: tauri-build.cjs
src-tauri/src/: lib.rs
(+153 files in other folders)
