[package]
name = "kai"
version = "1.1.3"
description = "AI coding assistant with persistent memory, background agents, and tool use"
authors = ["Tim Moreton"]
license = "ISC"
repository = "https://github.com/tmoreton/kai"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "6"
url = "2"
tauri-plugin-os = "2.3.2"
